# secure-communications-underwater

./: CMakeLists.txt  LICENSE  MessageComposer.cpp  MessageComposer.h  README.md  test.cpp
scripts/: adaptive_frequency_hopping.py
src/: CommunicationChannel.cpp  CommunicationChannel.h  FracturedMessage.cpp  FracturedMessage.h  HammingCode.cpp  HammingCode.h  KeyExchange.cpp  KeyExchange.h  MessageComposer.cpp  MessageComposer.h  PythonIntegration.cpp  PythonIntegration.h  Submarine.cpp  Submarine.h  ZeroKnowledgeAuth.cpp  ZeroKnowledgeAuth.h  main.cpp
tests/: test.cpp
